# fields-study-flow

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: fields-study-flow.mdc  git4study.mdc
.github/workflows/: ci.yml
docs/: COMPETITIVE_NOTES.md  MCP.md
examples/: transformer-roadmap-request.json
fields_study_flow/: __init__.py  artifact_templates.py  cli.py  knowledge_graph.py  live_search.py  local_resources.py  mcp_server.py  mcp_tools.py  models.py  offline_catalog.py  paper_lens.py  paper_metadata.py  rag.py  ranking.py  resource_bundle.py  roadmap.py  source-registry.yaml  sources.py
git4study/: __init__.py  cli.py  language.py  mcp_server.py  mcp_tools.py  models.py  offline_catalog.py  ranking.py  roadmap.py  sources.py
knowledge/: ai-cs-taxonomy.yaml
scripts/: draw_readme_figure.py
skills/ai-cs-learning-path/: SKILL.md
skills/paper-roadmap/: SKILL.md
tests/: test_cli.py  test_knowledge_graph.py  test_language.py  test_live_search.py  test_local_resources.py  test_mcp_tools.py  test_paper_lens.py  test_paper_metadata.py  test_rag.py  test_rag_packaging.py  test_ranking.py  test_resource_bundle.py  test_roadmap.py  test_sources.py
