[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fields-study-flow"
version = "0.1.0"
description = "Agent-native AI/CS learning roadmap generator with Skills, MCP tools, and multi-source resource ranking."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "fields-study-flow contributors" }]
keywords = ["ai", "learning-path", "mcp", "skills", "education", "research"]
dependencies = [
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "nbformat>=5.10",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fields-study-flow = "fields_study_flow.cli:main"
git4study = "git4study.cli:main"

[tool.setuptools.packages.find]
include = ["fields_study_flow*", "git4study*"]

[tool.setuptools.package-data]
fields_study_flow = ["source-registry.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
